tests/negative/_cycle_back.orb
// TODO! replace errorUnknown with actual error messages
// TODO! remove obsolete compiler messages
// TODO! check there are no types where there shouldn't be
import "tests/negative/test_import_cycle.orb";
